--- a/main/static/css/estilos.css
+++ b/main/static/css/estilos.css
@@ -18,94 +18,93 @@ input[type="radio"] {
 }
 
 body {
-    font-family: 'Roboto', sans-serif; /* Fonte em Roboto */
-    background: #F8F8F8; /* Cor de fundo da página */
-    margin: 0; /* Remove margens padrão */
+    font-family: 'Roboto', sans-serif;
+    background: #F8F8F8;
+    margin: 0;
 }
 
 header {
     position: relative;
-    text-align: center; /* Centraliza o texto do cabeçalho */
-    background-color: #ffffff; /* Cor de fundo do cabeçalho */
-    margin: 0; /* Garantir que não haja margem */
-    padding: 0; /* Elimina padding do cabeçalho */
+    text-align: center;
+    background-color: #ffffff;
+    margin: 0;
+    padding: 0;
 }
 
 .header-banner {
-    width: 100%; /* Largura total do banner */
-    margin: 0; /* Remove qualquer margem */
-    padding: 0; /* Remove qualquer padding */
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 .header-banner img {
-    width: 102%; /* Imagem ocupa toda a largura */
-    display: block; /* Remove espaço em branco na base da imagem */
+    width: 102%;
+    display: block;
 }
 
 .header-content {
-    position: absolute; /* Para sobrepor a imagem */
-    top: 75%; /* Ajuste a posição vertical para descer */
+    position: absolute;
+    top: 75%;
     left: 50%; 
-    transform: translate(-50%, -50%); /* Centraliza o texto */
+    transform: translate(-50%, -50%);
     padding: 40px;
-    background: #FFFFFF; /* Fundo branco */
-    border-radius: 20px; /* Cantos arredondados */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); /* Sombra da caixa */
-    max-width: 90%; /* Largura máxima para responsividade */
-    text-align: left; /* Alinhamento do texto à esquerda */
+    background: #FFFFFF;
+    border-radius: 20px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    max-width: 90%;
+    text-align: left;
 }
 
 .header-content h1 {
-    font-size: 48px; /* Tamanho da fonte maior */
-    line-height: 1.2; /* Ajuste do espaçamento */
-    margin: 0; /* Remove margens do título */
+    font-size: 48px;
+    line-height: 1.2;
+    margin: 0;
 }
 
 .header-content p {
-    font-size: 18px; /* Tamanho da fonte da descrição */
-    line-height: 1.5; /* Aumenta o espaçamento da linha */
+    font-size: 18px;
+    line-height: 1.5;
 }
 
 .menu {
     position: absolute;
-    top: 20px; /* Altura do menu */
-    left: 220px; /* Aumenta a margem esquerda */
-    z-index: 2; /* Aparece sobre a imagem */
-    display: flex; /* Utiliza flexbox para disposição */
+    top: 20px;
+    left: 220px;
+    z-index: 2;
+    display: flex;
 }
 
 .menu ul {
-    display: flex; /* Disposição horizontal */
+    display: flex;
     padding: 0;
-    margin: 0; /* Remove margens padrão */
-    list-style: none; /* Remove marcadores da lista */
+    margin: 0;
+    list-style: none;
 }
 
 .menu li {
-    margin: 0 10px; /* Espaço lateral entre os itens */
+    margin: 0 10px;
 }
 
 .menu a {
-    display: flex; /* Utilize flex para centralizar o conteúdo */
-    justify-content: center; /* Centraliza o texto horizontalmente */
-    align-items: center; /* Centraliza o texto verticalmente */
-    width: 141px; /* Largura fixa */
-    height: 40px; /* Altura fixa */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 141px;
+    height: 40px;
     text-decoration: none;
-    color: #000000; /* Cor do texto do menu */
+    color: #000000;
     font-weight: bold;
-    background: #F8F6F3; /* Cor de fundo dos itens do menu */
-    transition: background 0.3s; /* Efeito de transição */
-    text-align: center; /* Centraliza o texto dentro do botão */
+    background: #F8F6F3;
+    transition: background 0.3s;
+    text-align: center;
 }
 
 .menu a:hover {
-    background: #E0E0E0; /* Cor de fundo ao passar o mouse */
+    background: #E0E0E0;
 }
 
-/* Adicione ícones através da classe de ícone */
 .menu a i {
-    margin-right: 5px; /* Espaçamento entre ícone e texto */
+    margin-right: 5px;
 }
 
 .pagina {
@@ -113,7 +112,7 @@ header {
     background: #C9E957;
     display: flex;
     align-items: center;
-    justify-content: center; /* Centraliza os itens */
+    justify-content: center;
     padding: 60px 40px;
 }
 
@@ -151,6 +150,7 @@ header {
     font-weight: bold;
     display: inline-block;
     transition: background-color 0.3s, color 0.3s;
+    text-decoration: none;
 }
 
 .botao-sondagem:hover {
@@ -230,8 +230,6 @@ header {
     background-color: #0056b3;
 }
 
-
-/* Responsividade Geral */
 @media (max-width: 768px) {
     .pagina {
         flex-direction: column;
